[gd_scene load_steps=10 format=3 uid="uid://bcjxhjyjh7xq"]

[ext_resource type="Script" path="res://scripts/option_menu.gd" id="1_n6jvm"]
[ext_resource type="Texture2D" uid="uid://dhyv5wdfig3yp" path="res://assets/back_button.png" id="1_puqve"]
[ext_resource type="Texture2D" uid="uid://cjgrwmndrxp47" path="res://assets/back_button_hover.png" id="2_ae07b"]
[ext_resource type="Texture2D" uid="uid://dkb6dh726bbl5" path="res://assets/background_pic.png" id="2_ejfs1"]
[ext_resource type="Texture2D" uid="uid://b27o5dfd3fjbq" path="res://assets/Wooden Sign.png" id="3_krxv4"]
[ext_resource type="Texture2D" uid="uid://hvgep1jqybdy" path="res://assets/Audio Setting.png" id="10_q6cvt"]
[ext_resource type="Texture2D" uid="uid://bbqxr2spcnmdo" path="res://assets/Audio Setting_hover.png" id="11_45naf"]
[ext_resource type="Texture2D" uid="uid://djiblcf7f7ogo" path="res://assets/Graphic Setting.png" id="12_j4wej"]
[ext_resource type="Texture2D" uid="uid://dcnol3cgymnyd" path="res://assets/Graphic Setting_hover.png" id="13_ws3ow"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6jvm")

[node name="BackgroundPic" type="Sprite2D" parent="."]
position = Vector2(1356, 810)
scale = Vector2(1.88893, 1.59831)
texture = ExtResource("2_ejfs1")

[node name="WoodenSign" type="Sprite2D" parent="."]
position = Vector2(545, 154.572)
scale = Vector2(1.34586, 1.38958)
texture = ExtResource("3_krxv4")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.05
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 93.0
offset_right = 547.0
offset_bottom = 157.0
grow_vertical = 2
theme_override_constants/separation = 50

[node name="GraphicButton" type="TextureButton" parent="VBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("12_j4wej")
texture_hover = ExtResource("13_ws3ow")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.085
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -89.0
offset_right = 476.8
offset_bottom = -25.0
grow_vertical = 2
theme_override_constants/separation = 50

[node name="AudioButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("10_q6cvt")
texture_hover = ExtResource("11_45naf")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -120.0
offset_right = 1363.0
offset_bottom = -23.0
grow_vertical = 0
theme_override_constants/separation = 130

[node name="Back" type="TextureButton" parent="HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("1_puqve")
texture_hover = ExtResource("2_ae07b")

[connection signal="pressed" from="VBoxContainer2/GraphicButton" to="." method="_on_graphic_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/Back" to="." method="_on_back_pressed"]
